--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -4,7 +4,7 @@ header {
   align-items: center;
   position: relative;
   z-index: 10;
-  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.25);
+  box-shadow: var(--box-shadow);
 }
 
 .header__title {
@@ -35,6 +35,7 @@ header {
 @media screen and (max-width: 450px) {
   header {
     flex-direction: column;
+    min-height: 150px;
   }
 
   .header__title {
