--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,8 @@
   --lm-input: hsl(0, 0%, 52%); /* Light Mode Input */
   --lm-background: hsl(0, 0%, 98%); /* Light Mode Background */
   --white: hsl(0, 0%, 100%); /* Dark Mode Text & Light Mode Elements */
-  --border-radius: 0.7rem;
+  --border-radius: 0.5rem;
+  --box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.25);
 }
 
 * {
