--- a/src/components/Main.css
+++ b/src/components/Main.css
@@ -9,6 +9,7 @@
   display: grid;
   grid-gap: 80px;
   grid-template-columns: repeat(4, 1fr);
+  flex: 1;
 }
 
 .search__bar {
@@ -30,6 +31,10 @@
 .light::placeholder {
   color: var(--lm-text);
   opacity: 1;
+}
+
+footer {
+  text-align: center;
 }
 
 @media screen and (max-width: 1400px) {
