--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,5 +1,6 @@
 header {
   padding: 25px;
+  height: 12vh;
   display: flex;
   align-items: center;
   position: relative;
@@ -35,7 +36,7 @@ header {
 @media screen and (max-width: 450px) {
   header {
     flex-direction: column;
-    min-height: 150px;
+    min-height: 15vh;
   }
 
   .header__title {
