--- a/src/components/Details.css
+++ b/src/components/Details.css
@@ -4,15 +4,21 @@
 }
 
 .wrapper__top {
-  height: 80px;
+  height: 100px;
 }
 
 .back__button {
   text-decoration: none;
-  margin: 40px 0;
-  padding: 10px 45px;
+  margin: 20px 0;
+  padding: 10px 35px;
   border-radius: var(--border-radius);
   box-shadow: var(--box-shadow);
+  background-repeat: no-repeat;
+  background-position: 10px center;
+  display: flex;
+  max-width: 150px;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .wrapper__main {
@@ -50,8 +56,8 @@
   grid-column: span 2;
   padding: 20px 0;
   display: grid;
-  grid-template-columns: 100px 1fr;
-  align-items: center;
+  grid-template-columns: 150px 1fr;
+  align-items: start;
 }
 
 .border__countries {
@@ -60,7 +66,7 @@
 }
 
 .footer__subheading {
-  align-self: flex-start;
+  padding: 10px 0;
 }
 
 .border__button {
@@ -89,7 +95,11 @@
 
 @media screen and (max-width: 700px) {
   .details__wrapper {
-    padding: 30px 50px;
+    padding: 20px 50px;
+  }
+
+  .wrapper__top {
+    height: 80px;
   }
 
   .content__title {
